# mcp-template

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  azure-pipeline.yaml  beetle.md  pyproject.toml  start.py
.claude/: settings.local.json
docs/: INDEX.md  MCP_INSTRUCTIONS_FRAMEWORK.md  PACKAGES.md  PYTHON.md  TOOLS_BEST_PRACTICES.md  WORKSPACES.md  interpret-live-log-bridge.md  publish-beetle-to-pypi.md
mcp_server/: pyproject.toml
mcp_server/data/: RESUME.md  RESUME_CREATIVE.md  RESUME_EXTENDED.md
mcp_server/src/mcp_server/: __main__.py
mcp_server/src/mcp_server/instructions/: __init__.py  instructions.py
mcp_server/src/mcp_server/tool_box/: __init__.py  tool_names.py
mcp_server/src/mcp_server/tool_box/_tools_template/: __init__.py  schemas.py  tool_names.py  tools.py
mcp_server/src/mcp_server/tool_box/_tools_template/docstrings/: __init__.py  tool_template_docs.py
mcp_server/src/mcp_server/tool_box/md_reader/: reader.py  schemas.py  tool_names.py  tools.py
mcp_server/src/mcp_server/tool_box/md_reader/docstrings/: __init__.py  md_reader_docs.py
mcp_server/src/mcp_server/tool_box/portfolio/: __init__.py  loader.py  schemas.py  tool_names.py  tools.py
mcp_server/src/mcp_server/tool_box/portfolio/docstrings/: __init__.py  portfolio_docs.py
mcp_server/src/mcp_server/workflows/: __init__.py
src/mcp_workspace/: __init__.py
tests/: conftest.py
tests/unit/mcp_server/tool_box/md_reader/: test_reader.py
tests/unit/mcp_server/tool_box/md_reader/fixtures/: sample.md
