[project]
name = "mcp-template-workspace"
version = "0.1.0"
description = "A generic, production-ready MCP Server template with best practices for tool design, agent instructions, and monorepo structure."
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.2",
    "safety>=3.6.2",
    "ty>=0.0.12",
]

[tool.uv.workspace]
members = ["packages/*", "mcp_server"]

[tool.uv]
keyring-provider = "subprocess"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "pyproject.toml:version",
    "packages/*/pyproject.toml:version",
    "mcp_server/pyproject.toml:version",
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=mcp_server --cov=mcp_shared --cov=lab_mouse --cov=beetle --cov=tui --cov-report html --cov-report xml --cov-report term-missing"
testpaths = ["tests"]
pythonpath = [".", "packages", "packages/beetle/src", "packages/tui/src", "packages/lab_mouse/src"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "mcp_server/src/*",
    "*/token_usage/utils.py",  # I/O heavy integration utility; covered by integration tests
    "*/beetle/log_server.py",  # TCP server I/O; covered by integration tests
]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
fail_under = 80
precision = 2
show_missing = true

[tool.ruff]
line-length = 120
exclude = [".venv", ".mypy_cache", ".ruff_cache", ".coverage", ".pytest_cache"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle (Error)
    "I",      # isort
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "C4",     # flake8-comprehensions
    "PERF",   # Perflint
    "PIE",    # flake8-pie
    "PYI006", # flake8-pyi
    "PYI062", # flake8-pyi
    "PYI063", # flake8-pyi
    "PYI066", # flake8-pyi
    "ANN",    # flake8-annotations
]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "D205",
    "D415",
    "E501",
    "B011",
    "B028",
    "B904",
    "PIE804",
    "ANN401", # This library makes legitimate use of Any in several places to allow flexibility by consumers of the library
]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { known-first-party = ["pydantic", "tests"] }
mccabe = { max-complexity = 14 }
pydocstyle = { convention = "google" }

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D102", "D103", "D106", "ANN201"]
"**/tests/*" = ["D101", "D102", "D103", "D106", "ANN201"]
"mcp_server/src/*" = ["D101", "D102", "D103"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
